
NOTE:  Still need to fix a bug in the caching mechanism.  Previously,
the += operator would only append to values found in the file being
parsed.  Now it will add to the existing value found in the object,
but the *entire* result winds up in the cache, not just what was in
the current file.  Shouldn't be an issue in the time it'll take to
complete the work.
----------------------------------------------------------------------
Fri Feb 10 11:12:04 2012                        Michael Jennings (mej)

Added a unit test to flag the "bug" I mentioned in yesterday's commit,
and it turns out that it doesn't adversely affect any desired/correct
behavior.  So rather than do a big revamp, we've decided to leave the
unit tests in place and will maintain the current (technically wrong
but behaviorally correct) code until such time as the unit tests fail
or other problems arise which require us to revisit.
----------------------------------------------------------------------
Thu Feb 23 14:17:57 2012                            Jason Stover (jms)

Added -e flag to wwconfig. For use with Bourne output, and will print
the export lines. Otherwise just print the [VAR]=[VAL] lines.

Intial start of SYSCONFDIR/warewulf/wwfunctions for Bash shell scripts
to break apart a bunch of the replicated code (mkchroot, etc..). Maybe
usefull down the road for other things.
----------------------------------------------------------------------
Wed Feb 29 11:20:30 2012                        Michael Jennings (mej)

Fair warning:  There (may) be dragons.

Fundamentally revamping the external interface to NetDev object access
via Node objects.  The goal here was to make naming, invocation, and
internal handling more consistent.  This is still pending review and
subject to change.  There are also some subtle bugfixes and cleanups
of documentation as well as some consolidation of functionality.
----------------------------------------------------------------------